// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select MenuItem component renders using menu items 1`] = `
<div>
  <form
    data-testid="form"
    novalidate=""
  >
    <div
      class="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
    >
      <label
        class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiInputLabel-shrink-13 MuiFormLabel-filled-22 MuiFormLabel-required-23 MuiInputLabel-required-9"
        data-shrink="true"
        id="select-input-best"
      >
        Test
        <span
          aria-hidden="true"
          class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10"
        >
           
          *
        </span>
      </label>
      <div
        class="MuiInputBase-root-50 MuiInput-root-36 MuiInput-underline-41 MuiInputBase-formControl-51 MuiInput-formControl-37"
      >
        <div
          aria-haspopup="listbox"
          aria-labelledby="select-input-best mui-component-select-best"
          class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiInputBase-input-61 MuiInput-input-46"
          id="mui-component-select-best"
          role="button"
          tabindex="0"
        >
          Bar
        </div>
        <input
          aria-hidden="true"
          class="MuiSelect-nativeInput-35"
          name="best"
          required=""
          tabindex="-1"
          value="bar"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-68 MuiSelect-icon-31"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </div>
  </form>
</div>
`;

exports[`Select Multiple has multiple 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        novalidate=""
      >
        <div
          class="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
        >
          <label
            class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiInputLabel-shrink-13 MuiFormLabel-filled-22 MuiFormLabel-required-23 MuiInputLabel-required-9"
            data-shrink="true"
            id="select-input-best"
          >
            Test
            <span
              aria-hidden="true"
              class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiInputBase-root-50 MuiInput-root-36 MuiInput-underline-41 MuiInputBase-formControl-51 MuiInput-formControl-37"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="select-input-best mui-component-select-best"
              class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiInputBase-input-61 MuiInput-input-46"
              id="mui-component-select-best"
              role="button"
              tabindex="0"
            >
              Ack, Bar
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput-35"
              name="best"
              required=""
              tabindex="-1"
              value="bar,ack"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-68 MuiSelect-icon-31"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      novalidate=""
    >
      <div
        class="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
      >
        <label
          class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiInputLabel-shrink-13 MuiFormLabel-filled-22 MuiFormLabel-required-23 MuiInputLabel-required-9"
          data-shrink="true"
          id="select-input-best"
        >
          Test
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root-50 MuiInput-root-36 MuiInput-underline-41 MuiInputBase-formControl-51 MuiInput-formControl-37"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="select-input-best mui-component-select-best"
            class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiInputBase-input-61 MuiInput-input-46"
            id="mui-component-select-best"
            role="button"
            tabindex="0"
          >
            Ack, Bar
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput-35"
            name="best"
            required=""
            tabindex="-1"
            value="bar,ack"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-68 MuiSelect-icon-31"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Select basic component renders outlined 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        data-testid="form"
        novalidate=""
      >
        <div
          class="MuiFormControl-root-1 MuiFormControl-marginNormal-2 MuiFormControl-fullWidth-4"
        >
          <label
            class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiInputLabel-shrink-13 MuiInputLabel-outlined-16 MuiFormLabel-filled-22 MuiFormLabel-required-23 MuiInputLabel-required-9"
            data-shrink="true"
            id="select-input-best"
          >
            Test
            <span
              aria-hidden="true"
              class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiInputBase-root-51 MuiOutlinedInput-root-36 MuiInputBase-formControl-52"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="select-input-best mui-component-select-best"
              class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiSelect-outlined-28 MuiInputBase-input-62 MuiOutlinedInput-input-46"
              id="mui-component-select-best"
              role="button"
              tabindex="0"
            >
              Bar
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput-35"
              name="best"
              required=""
              tabindex="-1"
              value="bar"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-69 MuiSelect-icon-31 MuiSelect-iconOutlined-34"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-82 MuiOutlinedInput-notchedOutline-45"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled-84 PrivateNotchedOutline-legendNotched-85"
              >
                <span>
                  Test
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      data-testid="form"
      novalidate=""
    >
      <div
        class="MuiFormControl-root-1 MuiFormControl-marginNormal-2 MuiFormControl-fullWidth-4"
      >
        <label
          class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiInputLabel-shrink-13 MuiInputLabel-outlined-16 MuiFormLabel-filled-22 MuiFormLabel-required-23 MuiInputLabel-required-9"
          data-shrink="true"
          id="select-input-best"
        >
          Test
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root-51 MuiOutlinedInput-root-36 MuiInputBase-formControl-52"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="select-input-best mui-component-select-best"
            class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiSelect-outlined-28 MuiInputBase-input-62 MuiOutlinedInput-input-46"
            id="mui-component-select-best"
            role="button"
            tabindex="0"
          >
            Bar
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput-35"
            name="best"
            required=""
            tabindex="-1"
            value="bar"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-69 MuiSelect-icon-31 MuiSelect-iconOutlined-34"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-82 MuiOutlinedInput-notchedOutline-45"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-84 PrivateNotchedOutline-legendNotched-85"
            >
              <span>
                Test
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Select basic component renders outlined without a label 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        data-testid="form"
        novalidate=""
      >
        <div
          class="MuiFormControl-root-1 MuiFormControl-marginNormal-2 MuiFormControl-fullWidth-4"
        >
          <div
            class="MuiInputBase-root-31 MuiOutlinedInput-root-16 MuiInputBase-formControl-32"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="select-input-best mui-component-select-best"
              class="MuiSelect-root-5 MuiSelect-select-6 MuiSelect-selectMenu-9 MuiSelect-outlined-8 MuiInputBase-input-42 MuiOutlinedInput-input-26"
              id="mui-component-select-best"
              role="button"
              tabindex="0"
            >
              Bar
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput-15"
              name="best"
              required=""
              tabindex="-1"
              value="bar"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-49 MuiSelect-icon-11 MuiSelect-iconOutlined-14"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-62 MuiOutlinedInput-notchedOutline-25"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-63"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      data-testid="form"
      novalidate=""
    >
      <div
        class="MuiFormControl-root-1 MuiFormControl-marginNormal-2 MuiFormControl-fullWidth-4"
      >
        <div
          class="MuiInputBase-root-31 MuiOutlinedInput-root-16 MuiInputBase-formControl-32"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="select-input-best mui-component-select-best"
            class="MuiSelect-root-5 MuiSelect-select-6 MuiSelect-selectMenu-9 MuiSelect-outlined-8 MuiInputBase-input-42 MuiOutlinedInput-input-26"
            id="mui-component-select-best"
            role="button"
            tabindex="0"
          >
            Bar
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput-15"
            name="best"
            required=""
            tabindex="-1"
            value="bar"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-49 MuiSelect-icon-11 MuiSelect-iconOutlined-14"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-62 MuiOutlinedInput-notchedOutline-25"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-63"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Select basic component renders without errors 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        data-testid="form"
        novalidate=""
      >
        <div
          class="MuiFormControl-root-1 MuiFormControl-marginNormal-2 MuiFormControl-fullWidth-4"
        >
          <label
            class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiInputLabel-shrink-13 MuiFormLabel-filled-22 MuiFormLabel-required-23 MuiInputLabel-required-9"
            data-shrink="true"
            id="select-input-best"
          >
            Test
            <span
              aria-hidden="true"
              class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiInputBase-root-50 MuiInput-root-36 MuiInput-underline-41 MuiInputBase-formControl-51 MuiInput-formControl-37"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="select-input-best mui-component-select-best"
              class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiInputBase-input-61 MuiInput-input-46"
              id="mui-component-select-best"
              role="button"
              tabindex="0"
            >
              Bar
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput-35"
              name="best"
              required=""
              tabindex="-1"
              value="bar"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-68 MuiSelect-icon-31"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      data-testid="form"
      novalidate=""
    >
      <div
        class="MuiFormControl-root-1 MuiFormControl-marginNormal-2 MuiFormControl-fullWidth-4"
      >
        <label
          class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiInputLabel-shrink-13 MuiFormLabel-filled-22 MuiFormLabel-required-23 MuiInputLabel-required-9"
          data-shrink="true"
          id="select-input-best"
        >
          Test
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root-50 MuiInput-root-36 MuiInput-underline-41 MuiInputBase-formControl-51 MuiInput-formControl-37"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="select-input-best mui-component-select-best"
            class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiInputBase-input-61 MuiInput-input-46"
            id="mui-component-select-best"
            role="button"
            tabindex="0"
          >
            Bar
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput-35"
            name="best"
            required=""
            tabindex="-1"
            value="bar"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-68 MuiSelect-icon-31"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Select displayEmpty renders without errors 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        novalidate=""
      >
        <div
          class="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
        >
          <label
            class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiInputLabel-shrink-13 MuiFormLabel-filled-22 MuiFormLabel-required-23 MuiInputLabel-required-9"
            data-shrink="true"
            id="select-input-best"
          >
            Test
            <span
              aria-hidden="true"
              class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiInputBase-root-50 MuiInput-root-36 MuiInput-underline-41 MuiInputBase-formControl-51 MuiInput-formControl-37"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="select-input-best mui-component-select-best"
              class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiInputBase-input-61 MuiInput-input-46"
              id="mui-component-select-best"
              role="button"
              tabindex="0"
            >
              Empty
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput-35"
              name="best"
              required=""
              tabindex="-1"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-68 MuiSelect-icon-31"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      novalidate=""
    >
      <div
        class="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
      >
        <label
          class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiInputLabel-shrink-13 MuiFormLabel-filled-22 MuiFormLabel-required-23 MuiInputLabel-required-9"
          data-shrink="true"
          id="select-input-best"
        >
          Test
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root-50 MuiInput-root-36 MuiInput-underline-41 MuiInputBase-formControl-51 MuiInput-formControl-37"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="select-input-best mui-component-select-best"
            class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiInputBase-input-61 MuiInput-input-46"
            id="mui-component-select-best"
            role="button"
            tabindex="0"
          >
            Empty
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput-35"
            name="best"
            required=""
            tabindex="-1"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-68 MuiSelect-icon-31"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Select errors with multiple has empty initialValues and submit 1`] = `
<div>
  <form
    novalidate=""
  >
    <div
      class="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
    >
      <label
        class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiFormLabel-error-21 MuiInputLabel-error-8 MuiFormLabel-required-23 MuiInputLabel-required-9"
        data-shrink="false"
        id="select-input-best"
      >
        Test
        <span
          aria-hidden="true"
          class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10 MuiFormLabel-error-21 MuiInputLabel-error-8"
        >
           
          *
        </span>
      </label>
      <div
        class="MuiInputBase-root-50 MuiInput-root-36 MuiInput-underline-41 MuiInputBase-error-56 MuiInput-error-42 MuiInputBase-formControl-51 MuiInput-formControl-37"
      >
        <div
          aria-haspopup="listbox"
          aria-labelledby="select-input-best mui-component-select-best"
          class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiInputBase-input-61 MuiInput-input-46"
          id="mui-component-select-best"
          role="button"
          tabindex="0"
        >
          <span>
            ​
          </span>
        </div>
        <input
          aria-hidden="true"
          class="MuiSelect-nativeInput-35"
          name="best"
          required=""
          tabindex="-1"
          value=""
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-68 MuiSelect-icon-31"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
      <p
        class="MuiFormHelperText-root-81 MuiFormHelperText-error-82 MuiFormHelperText-required-88"
      >
        is not best
      </p>
    </div>
    <button
      class="MuiButtonBase-root-118 MuiButton-root-89 MuiButton-contained-97 MuiButton-containedPrimary-98"
      data-testid="submit"
      tabindex="0"
      type="submit"
    >
      <span
        class="MuiButton-label-90"
      >
        Submit
      </span>
      <span
        class="MuiTouchRipple-root-121"
      />
    </button>
  </form>
</div>
`;

exports[`Select errors with multiple renders the helper text because no error 1`] = `
<div>
  <form
    novalidate=""
  >
    <div
      class="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
    >
      <label
        class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiFormLabel-error-21 MuiInputLabel-error-8 MuiFormLabel-required-23 MuiInputLabel-required-9"
        data-shrink="false"
        id="select-input-best"
      >
        Test
        <span
          aria-hidden="true"
          class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10 MuiFormLabel-error-21 MuiInputLabel-error-8"
        >
           
          *
        </span>
      </label>
      <div
        class="MuiInputBase-root-50 MuiInput-root-36 MuiInput-underline-41 MuiInputBase-error-56 MuiInput-error-42 MuiInputBase-formControl-51 MuiInput-formControl-37"
      >
        <div
          aria-haspopup="listbox"
          aria-labelledby="select-input-best mui-component-select-best"
          class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiInputBase-input-61 MuiInput-input-46"
          id="mui-component-select-best"
          role="button"
          tabindex="0"
        >
          <span>
            ​
          </span>
        </div>
        <input
          aria-hidden="true"
          class="MuiSelect-nativeInput-35"
          name="best"
          required=""
          tabindex="-1"
          value=""
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-68 MuiSelect-icon-31"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
      <p
        class="MuiFormHelperText-root-81 MuiFormHelperText-error-82 MuiFormHelperText-required-88"
      >
        is not best
      </p>
    </div>
    <button
      class="MuiButtonBase-root-118 MuiButton-root-89 MuiButton-contained-97 MuiButton-containedPrimary-98"
      data-testid="submit"
      tabindex="0"
      type="submit"
    >
      <span
        class="MuiButton-label-90"
      >
        Submit
      </span>
      <span
        class="MuiTouchRipple-root-121"
      />
    </button>
  </form>
</div>
`;

exports[`Select errors with multiple shows submit error 1`] = `
<div>
  <form
    novalidate=""
  >
    <div
      class="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
    >
      <label
        class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiInputLabel-shrink-13 MuiFormLabel-error-21 MuiInputLabel-error-8 MuiFormLabel-filled-22 MuiFormLabel-required-23 MuiInputLabel-required-9"
        data-shrink="true"
        id="select-input-best"
      >
        Test
        <span
          aria-hidden="true"
          class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10 MuiFormLabel-error-21 MuiInputLabel-error-8"
        >
           
          *
        </span>
      </label>
      <div
        class="MuiInputBase-root-50 MuiInput-root-36 MuiInput-underline-41 MuiInputBase-error-56 MuiInput-error-42 MuiInputBase-formControl-51 MuiInput-formControl-37"
      >
        <div
          aria-haspopup="listbox"
          aria-labelledby="select-input-best mui-component-select-best"
          class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiInputBase-input-61 MuiInput-input-46"
          id="mui-component-select-best"
          role="button"
          tabindex="0"
        >
          Ack
        </div>
        <input
          aria-hidden="true"
          class="MuiSelect-nativeInput-35"
          name="best"
          required=""
          tabindex="-1"
          value="ack"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-68 MuiSelect-icon-31"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
      <p
        class="MuiFormHelperText-root-81 MuiFormHelperText-error-82 MuiFormHelperText-filled-87 MuiFormHelperText-required-88"
      >
        submit error
      </p>
    </div>
    <button
      class="MuiButtonBase-root-118 MuiButton-root-89 MuiButton-contained-97 MuiButton-containedPrimary-98"
      data-testid="submit"
      tabindex="0"
      type="submit"
    >
      <span
        class="MuiButton-label-90"
      >
        Submit
      </span>
      <span
        class="MuiTouchRipple-root-121"
      />
    </button>
  </form>
</div>
`;

exports[`Select errors with single has empty initialValues and submit 1`] = `
<div>
  <form
    novalidate=""
  >
    <div
      class="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
    >
      <label
        class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiFormLabel-error-21 MuiInputLabel-error-8 MuiFormLabel-required-23 MuiInputLabel-required-9"
        data-shrink="false"
        id="select-input-best"
      >
        Test
        <span
          aria-hidden="true"
          class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10 MuiFormLabel-error-21 MuiInputLabel-error-8"
        >
           
          *
        </span>
      </label>
      <div
        class="MuiInputBase-root-50 MuiInput-root-36 MuiInput-underline-41 MuiInputBase-error-56 MuiInput-error-42 MuiInputBase-formControl-51 MuiInput-formControl-37"
      >
        <div
          aria-haspopup="listbox"
          aria-labelledby="select-input-best mui-component-select-best"
          class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiInputBase-input-61 MuiInput-input-46"
          id="mui-component-select-best"
          role="button"
          tabindex="0"
        >
          <span>
            ​
          </span>
        </div>
        <input
          aria-hidden="true"
          class="MuiSelect-nativeInput-35"
          name="best"
          required=""
          tabindex="-1"
          value=""
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-68 MuiSelect-icon-31"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
      <p
        class="MuiFormHelperText-root-81 MuiFormHelperText-error-82 MuiFormHelperText-required-88"
      >
        is not best
      </p>
    </div>
    <button
      class="MuiButtonBase-root-118 MuiButton-root-89 MuiButton-contained-97 MuiButton-containedPrimary-98"
      data-testid="submit"
      tabindex="0"
      type="submit"
    >
      <span
        class="MuiButton-label-90"
      >
        Submit
      </span>
      <span
        class="MuiTouchRipple-root-121"
      />
    </button>
  </form>
</div>
`;

exports[`Select errors with single renders the helper text because no error 1`] = `
<div>
  <form
    novalidate=""
  >
    <div
      class="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
    >
      <label
        class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiFormLabel-error-21 MuiInputLabel-error-8 MuiFormLabel-required-23 MuiInputLabel-required-9"
        data-shrink="false"
        id="select-input-best"
      >
        Test
        <span
          aria-hidden="true"
          class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10 MuiFormLabel-error-21 MuiInputLabel-error-8"
        >
           
          *
        </span>
      </label>
      <div
        class="MuiInputBase-root-50 MuiInput-root-36 MuiInput-underline-41 MuiInputBase-error-56 MuiInput-error-42 MuiInputBase-formControl-51 MuiInput-formControl-37"
      >
        <div
          aria-haspopup="listbox"
          aria-labelledby="select-input-best mui-component-select-best"
          class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiInputBase-input-61 MuiInput-input-46"
          id="mui-component-select-best"
          role="button"
          tabindex="0"
        >
          <span>
            ​
          </span>
        </div>
        <input
          aria-hidden="true"
          class="MuiSelect-nativeInput-35"
          name="best"
          required=""
          tabindex="-1"
          value=""
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-68 MuiSelect-icon-31"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
      <p
        class="MuiFormHelperText-root-81 MuiFormHelperText-error-82 MuiFormHelperText-required-88"
      >
        is not best
      </p>
    </div>
    <button
      class="MuiButtonBase-root-118 MuiButton-root-89 MuiButton-contained-97 MuiButton-containedPrimary-98"
      data-testid="submit"
      tabindex="0"
      type="submit"
    >
      <span
        class="MuiButton-label-90"
      >
        Submit
      </span>
      <span
        class="MuiTouchRipple-root-121"
      />
    </button>
  </form>
</div>
`;

exports[`Select errors with single shows submit error 1`] = `
<div>
  <form
    novalidate=""
  >
    <div
      class="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
    >
      <label
        class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiInputLabel-shrink-13 MuiFormLabel-error-21 MuiInputLabel-error-8 MuiFormLabel-filled-22 MuiFormLabel-required-23 MuiInputLabel-required-9"
        data-shrink="true"
        id="select-input-best"
      >
        Test
        <span
          aria-hidden="true"
          class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10 MuiFormLabel-error-21 MuiInputLabel-error-8"
        >
           
          *
        </span>
      </label>
      <div
        class="MuiInputBase-root-50 MuiInput-root-36 MuiInput-underline-41 MuiInputBase-error-56 MuiInput-error-42 MuiInputBase-formControl-51 MuiInput-formControl-37"
      >
        <div
          aria-haspopup="listbox"
          aria-labelledby="select-input-best mui-component-select-best"
          class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiInputBase-input-61 MuiInput-input-46"
          id="mui-component-select-best"
          role="button"
          tabindex="0"
        >
          Ack
        </div>
        <input
          aria-hidden="true"
          class="MuiSelect-nativeInput-35"
          name="best"
          required=""
          tabindex="-1"
          value="ack"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-68 MuiSelect-icon-31"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
      <p
        class="MuiFormHelperText-root-81 MuiFormHelperText-error-82 MuiFormHelperText-filled-87 MuiFormHelperText-required-88"
      >
        submit error
      </p>
    </div>
    <button
      class="MuiButtonBase-root-118 MuiButton-root-89 MuiButton-contained-97 MuiButton-containedPrimary-98"
      data-testid="submit"
      tabindex="0"
      type="submit"
    >
      <span
        class="MuiButton-label-90"
      >
        Submit
      </span>
      <span
        class="MuiTouchRipple-root-121"
      />
    </button>
  </form>
</div>
`;

exports[`Select works without initialValues renders multiple=false without error 1`] = `
<div>
  <form
    novalidate=""
  >
    <div
      class="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
    >
      <label
        class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiFormLabel-required-23 MuiInputLabel-required-9"
        data-shrink="false"
        id="select-input-best"
      >
        Test
        <span
          aria-hidden="true"
          class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10"
        >
           
          *
        </span>
      </label>
      <div
        class="MuiInputBase-root-50 MuiInput-root-36 MuiInput-underline-41 MuiInputBase-formControl-51 MuiInput-formControl-37"
      >
        <div
          aria-haspopup="listbox"
          aria-labelledby="select-input-best mui-component-select-best"
          class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiInputBase-input-61 MuiInput-input-46"
          id="mui-component-select-best"
          role="button"
          tabindex="0"
        >
          <span>
            ​
          </span>
        </div>
        <input
          aria-hidden="true"
          class="MuiSelect-nativeInput-35"
          name="best"
          required=""
          tabindex="-1"
          value=""
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-68 MuiSelect-icon-31"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
      <p
        class="MuiFormHelperText-root-81 MuiFormHelperText-required-88"
      >
        omg helper text
      </p>
    </div>
  </form>
</div>
`;

exports[`Select works without initialValues renders multiple=true without error 1`] = `
<div>
  <form
    novalidate=""
  >
    <div
      class="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
    >
      <label
        class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiFormLabel-required-23 MuiInputLabel-required-9"
        data-shrink="false"
        id="select-input-best"
      >
        Test
        <span
          aria-hidden="true"
          class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10"
        >
           
          *
        </span>
      </label>
      <div
        class="MuiInputBase-root-50 MuiInput-root-36 MuiInput-underline-41 MuiInputBase-formControl-51 MuiInput-formControl-37"
      >
        <div
          aria-haspopup="listbox"
          aria-labelledby="select-input-best mui-component-select-best"
          class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiInputBase-input-61 MuiInput-input-46"
          id="mui-component-select-best"
          role="button"
          tabindex="0"
        >
          <span>
            ​
          </span>
        </div>
        <input
          aria-hidden="true"
          class="MuiSelect-nativeInput-35"
          name="best"
          required=""
          tabindex="-1"
          value=""
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-68 MuiSelect-icon-31"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
      <p
        class="MuiFormHelperText-root-81 MuiFormHelperText-required-88"
      >
        omg helper text
      </p>
    </div>
  </form>
</div>
`;
